# simple_fastapi

./: Dockerfile  Golden Signals-1764559385728.json  docker-compose.yml  prometheus.yml  pyproject.toml
