[project]
name = "simple-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.8, <3.9"
dependencies = [
    "pytest==5.3.4",
    "ipython==7.11.1",
    "pydantic==1.6.2",
    "uvicorn==0.15.0",
    "fastapi==0.68.1",
    "requests==2.23.0",
    "aiofiles==0.4.0",
    "pytest-asyncio==0.10.0",
    "tornado==6.0.4",
    "jinja2==2.11.1",
    "pytils==0.3",
    "pytz==2019.3",
    "Pillow==9.0.1",
    "lxml==4.9.1",
    "gino[starlette]==1.0.0",  # <-- вот так указываем extras
    "alembic==1.4.2",
    "sqlalchemy-utils==0.36.3",
    "starlette-prometheus==0.6.0",
    "sentry_sdk==0.14.3",
    "pydantic-sqlalchemy==0.0.4",
    "sqlalchemy==1.3.24",
    "python-dotenv==0.13.0",
    "psycopg2-binary==2.8.5",
    "gunicorn==20.0.4",
    "websockets==10.1",
    "MarkupSafe<2.1"
]
